--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
          
      <div class="cards">
              <!-- card -->
-             <div style="padding: 0px 10px;">
+             <div style="padding: 0px 10px; border: 1px solid rgb(71, 71, 71); width: 390px; padding: 25px;">
                  <img src="./img/cheek.png" alt="">
                  <h4 id="card-title">Vegie Muffen &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  16$</h4>
                  <p card-paaragrof><br>
@@ -87,7 +87,7 @@
              <!-- card2  -->
              <br>
              <br>
-             <div style="padding: 0px 10px;">
+             <div style="padding: 0px 10px; border: 1px solid rgb(71, 71, 71); width: 390px; padding: 25px;">
                  <img src="./img/salat.png" alt="">
                  <h4 id="card-title">Vegie Muffen  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 12$</h4>
                  <p card-paaragrof><br>
@@ -97,7 +97,7 @@
                      <button class="btn-main">+</button>
                  </div>
                  <!-- card3 -->
-                 <div style="padding: 0px 10px;">
+                 <div style="padding: 0px 10px; border: 1px solid rgb(71, 71, 71); width: 390px; padding: 25px;">
                      <img src="./img/salat.png" alt="">
                      <h4 id="card-title">Vegie Muffen  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 10$</h4>
                      <p card-paaragrof><br>
@@ -112,7 +112,7 @@
 
      <div class="cards2">
         <!-- card4 -->
-        <div style="padding: 0px 10px;">
+        <div style="padding: 0px 10px; border: 1px solid rgb(71, 71, 71); width: 390px; padding: 25px;">
             <img src="./img/salt.png" alt="">
             <h4 id="card-title">Vegie Muffen  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 10$</h4>
             <p card-paaragrof><br>
@@ -124,7 +124,7 @@
             </div>
  
             <!-- card5 -->
-            <div style="padding: 0px 10px;">
+            <div style="padding: 0px 10px; border: 1px solid rgb(71, 71, 71); width: 390px; padding: 25px;">
                 <img src="./img/cacashi.png" alt="">
                 <h4 id="card-title">Vegie Muffen  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 10$</h4>
                 <p card-paaragrof><br>
@@ -134,7 +134,7 @@
                     <br><br><br><br><br>
                     <button class="btn-main">+</button>
                 </div>
-                <div style="padding: 0px 10px;">
+                <div style="padding: 0px 10px; border: 1px solid rgb(71, 71, 71); width: 390px; padding: 25px;">
                     <img src="./img/pomidor.png" alt="">
                     <h4 id="card-title">Vegie Muffen  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 10$</h4>
                     <p card-paaragrof><br>
@@ -144,8 +144,27 @@
                         <br><br><br><br><br>
                         <button class="btn-main">+</button>
                     </div>
-     </div>
+     </div> 
+     <div class="iphone14pro">
+        <br><br><br><br><br><br><br><br><br>    
 
+         <div>
+            <br><br><br><br><br><br><br><br><br><br>
+        <h3 class="take">Take away</h3><br><br>
+        <b class="b-tag">Food Stalls with Persons but  to <br> Product marketing plane. </b>
+        <br><br>
+        <p>There are many things are needed to start the Fast Food Business. You need <br> not only Just Food Stalls with Persons but also specialized equipmentwith <br> Persons but also  Just Food Stalls with Persons.</p>
+         </div>
+         <div>
+            <br><br>
+            <img class="right" src="./img/telefon.png" alt="">
+         </div>
+        </div>
+        <div class="container">
+ <div></div>
+            <button class="button1">App Store</button> &nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;<button class="button2">Google Play</button>
+        </div>
   </main>
 </body>
 </html>
